--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.11"
 
 [tool.poetry.group.dev.dependencies]
 pytest-selenium = "^4.0.0"
+termcolor = "^2.2.0"
+webdriver-manager = "^3.8.5"
 
 [build-system]
 requires = ["poetry-core"]
